tests/ui/lifetime-predicate-unsupported.stderr
error: lifetime predicates are unsupported
 --> tests/ui/lifetime-predicate-unsupported.rs:7:30
  |
7 | #[penum[ (T) where T: Trait, 'a: 'b ]]
  |                              ^^^^^^
